fix: Fix OG Protocol embed

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="StationaryStation's Developer Portfolio" />
     <title>StationSite</title>
+    <meta property="og:name" content="StationSite" />
+    <meta property="og:site_name" content="StationSite" />
+    <meta property="og:description" content="Personal site made by StationaryStation" />
+    <meta property="og:image" content="https://github.com/stationaryStation/portfolio/blob/master/public/assets/img/thumb.png?raw=true" />
   </head>
   <body>
     <div id="root"></div>
